table wrapper with scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,14 @@
     background-color: dodgerblue;
     color:white;
 }
+
+#wrapper {
+    height: 200px;
+    width: 50%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+td {
+    height: 5px;
+}
