--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 
 #wrapper {
     height: 200px;
-    width: 50%;
+    width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -16,4 +16,10 @@ td {
 
 #right {
     float: right;
+}
+
+a {
+    border: solid;
+    border-color: black;
+    border: 1px;
 }
